@@ -1920,6 +1920,8 @@ public:
         npc_ebon_gargoyleAI(Creature* creature) : CasterAI(creature) {}
 
         uint32 despawnTimer;
+        Unit* owner;
+        Unit* target;
 
         void InitializeAI()
         {
@@ -1927,19 +1929,10 @@ public:
             uint64 ownerGuid = me->GetOwnerGUID();
             if (!ownerGuid)
                 return;
+            owner = me->GetOwner();
             // Not needed to be despawned now
             despawnTimer = 0;
-            // Find victim of Summon Gargoyle spell
-            std::list<Unit*> targets;
-            Trinity::AnyUnfriendlyUnitInObjectRangeCheck u_check(me, me, 30);
-            Trinity::UnitListSearcher<Trinity::AnyUnfriendlyUnitInObjectRangeCheck> searcher(me, targets, u_check);
-            me->VisitNearbyObject(30, searcher);
-            for (std::list<Unit*>::const_iterator iter = targets.begin(); iter != targets.end(); ++iter)
-                if ((*iter)->GetAura(49206, ownerGuid))
-                {
-                    me->Attack((*iter), false);
-                    break;
-                }
+            target = NULL;
         }
 
         void JustDied(Unit* /*killer*/)
@@ -1991,6 +1984,30 @@ public:
                     me->DespawnOrUnsummon();
                 return;
             }
+
+            if (!target)
+            {
+                // Find victim of Summon Gargoyle spell
+                std::list<Unit*> targets;
+                Trinity::AnyUnfriendlyUnitInObjectRangeCheck u_check(me, me, 30);
+                Trinity::UnitListSearcher<Trinity::AnyUnfriendlyUnitInObjectRangeCheck> searcher(me, targets, u_check);
+                me->VisitNearbyObject(30, searcher);
+                for (std::list<Unit*>::const_iterator iter = targets.begin(); iter != targets.end(); ++iter)
+                {
+                    if ((*iter)->HasAura(49206, me->GetOwnerGUID()))
+                    {
+                        target = (*iter);
+                        AttackStart(target);
+                        break;
+                    }
+                }
+            }
+            else
+                if (target && target->isAlive())
+                {
+                    AttackStart(target);
+                }
+
             CasterAI::UpdateAI(diff);
         }
     };
